--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ body * {
     width: 50px;
     height: 50px;
     background-repeat: no-repeat;
+    background-position: center;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -87,4 +88,28 @@ body * {
 
 .arrow-nav .arrow.disabled {
    opacity: .1;
+}
+
+.controls {
+    position: absolute;
+    bottom: 20px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    z-index: 1;
+}
+
+.controls .control {
+    list-style: none;
+    width: 10px;
+    height: 10px;
+    background-color: #fff;
+    border-radius: 50%;
+    margin: 0 5px;
+    cursor: pointer;
+    transition: .3s;
+}
+.controls .control.active,
+.controls .control:hover {
+    opacity: .1;
 }
