--- a/style.css
+++ b/style.css
@@ -144,6 +144,9 @@ body * {
     overflow: hidden;
     border-radius: 50%;
     margin-right: 15px;
+    cursor: pointer;
+    transition: var(--transition);
+    opacity: .5;
 }
 
 .custom-controls .custom-control:last-child {
@@ -152,13 +155,12 @@ body * {
 
 .custom-controls .custom-control:hover,
 .custom-controls .custom-control.active {
-    border: 3px solid var(--second-color);
+    transform: scale(1.2);
+    opacity: 1;
 }
 
 .custom-controls .custom-control img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    cursor: pointer;
-    transition: var(--transition);
 }
