made arrows optional with default imgs

--- a/style.css
+++ b/style.css
@@ -91,6 +91,8 @@ body * {
     border-radius: 50%;
     cursor: pointer;
     transition: var(--transition);
+    font-size: 40px;
+    color: var(--second-color);
 }
 /* adicionado pelo js */
 /* .arrow-nav .arrow.next {
